// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate frequency plot data Generates count data 1`] = `
{
  "plotData": [
    {
      "color": "#01FFFF",
      "x": "sample-1",
      "y": 2,
      "yCellSetKey": "cluster-a",
    },
    {
      "color": "#23FFFF",
      "x": "sample-1",
      "y": 1,
      "yCellSetKey": "cluster-b",
    },
    {
      "color": "#45FFFF",
      "x": "sample-1",
      "y": 0,
      "yCellSetKey": "cluster-c",
    },
    {
      "color": "#01FFFF",
      "x": "sample-2",
      "y": 0,
      "yCellSetKey": "cluster-a",
    },
    {
      "color": "#23FFFF",
      "x": "sample-2",
      "y": 1,
      "yCellSetKey": "cluster-b",
    },
    {
      "color": "#45FFFF",
      "x": "sample-2",
      "y": 2,
      "yCellSetKey": "cluster-c",
    },
  ],
  "xNamesToDisplay": [
    "Sample 1",
    "Sample 2",
  ],
  "yNamesToDisplay": [
    "cluster a",
    "cluster b",
    "cluster c",
  ],
}
`;

exports[`Generate frequency plot data Generates proportional data 1`] = `
{
  "plotData": [
    {
      "color": "#01FFFF",
      "x": "sample-1",
      "y": "66.667",
      "yCellSetKey": "cluster-a",
    },
    {
      "color": "#23FFFF",
      "x": "sample-1",
      "y": "33.333",
      "yCellSetKey": "cluster-b",
    },
    {
      "color": "#45FFFF",
      "x": "sample-1",
      "y": "0.000",
      "yCellSetKey": "cluster-c",
    },
    {
      "color": "#01FFFF",
      "x": "sample-2",
      "y": "0.000",
      "yCellSetKey": "cluster-a",
    },
    {
      "color": "#23FFFF",
      "x": "sample-2",
      "y": "33.333",
      "yCellSetKey": "cluster-b",
    },
    {
      "color": "#45FFFF",
      "x": "sample-2",
      "y": "66.667",
      "yCellSetKey": "cluster-c",
    },
  ],
  "xNamesToDisplay": [
    "Sample 1",
    "Sample 2",
  ],
  "yNamesToDisplay": [
    "cluster a",
    "cluster b",
    "cluster c",
  ],
}
`;
